added new version of aws sdk