@@ -1,9 +1,5 @@
 package com.backend.ecommerce.implementation;
 
-import com.amazonaws.HttpMethod;
-import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.AmazonS3Client;
-import com.amazonaws.services.s3.model.*;
 import com.backend.ecommerce.entity.Product;
 import com.backend.ecommerce.exception.ImageUploadException;
 import com.backend.ecommerce.mapper.ProductMapper;
@@ -13,44 +9,55 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.*;
+import software.amazon.awssdk.services.s3.presigner.S3Presigner;
+import software.amazon.awssdk.services.s3.presigner.model.GetObjectPresignRequest;
+import software.amazon.awssdk.services.s3.presigner.model.PresignedGetObjectRequest;
 
 import java.io.IOException;
-import java.net.URL;
-import java.util.Date;
+import java.time.Duration;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class S3ImageUploader implements ImageUploader {
 
-    @Autowired
-    private AmazonS3 client;
+    private final S3Client s3Client;
+    private final String bucketName;
+    private final ProductServiceImplementation productService;
+    private final ProductMapper productMapper;
+    private final S3Presigner s3Presigner;
 
     @Autowired
-    private ProductServiceImplementation productService;
-
-    @Autowired
-    private ProductMapper productMapper;
-
-    @Value("${app.s3.bucket}")
-    private String bucketName;
+    public S3ImageUploader(S3Client s3Client,
+                           @Value("${app.s3.bucket}") String bucketName,
+                           ProductServiceImplementation productService,
+                           ProductMapper productMapper,
+                           S3Presigner s3Presigner) {
+        this.s3Client = s3Client;
+        this.bucketName = bucketName;
+        this.productService = productService;
+        this.productMapper = productMapper;
+        this.s3Presigner = s3Presigner;
+    }
 
     @Override
     public String uploadImage(MultipartFile image, Long productId) {
-
         Product product;
 
         String actualFilename = image.getOriginalFilename();
         String fileName = UUID.randomUUID().toString() + actualFilename.substring(actualFilename.lastIndexOf("."));
 
-        // create metadata
-        ObjectMetadata metadata = new ObjectMetadata();
-        metadata.setContentLength(image.getSize());
-
-
         try {
             product = productMapper.reverse(productService.getProductById(productId));
-            PutObjectResult putObjectResult = client.putObject(new PutObjectRequest(bucketName, fileName, image.getInputStream(), metadata));
+            s3Client.putObject(PutObjectRequest.builder()
+                            .bucket(bucketName)
+                            .key(fileName)
+                            .build(),
+                    RequestBody.fromInputStream(image.getInputStream(), image.getSize()));
             product.setImageURL(fileName);
             productService.createProduct(product);
             return fileName;
@@ -61,41 +68,34 @@ public class S3ImageUploader implements ImageUploader {
 
     @Override
     public List<String> allImages() {
+        ListObjectsV2Request listRequest = ListObjectsV2Request.builder()
+                .bucket(bucketName)
+                .build();
 
-        ListObjectsV2Request listObjectRequest = new ListObjectsV2Request().withBucketName(bucketName);
+        ListObjectsV2Response listResponse = s3Client.listObjectsV2(listRequest);
 
-        ListObjectsV2Result listObjectsV2Result =
-        client.listObjectsV2(listObjectRequest);
-
-        List<S3ObjectSummary> objectSummaries = listObjectsV2Result.getObjectSummaries();
-
-        return objectSummaries.stream().map(item -> this.preSignedUrl(item.getKey())).toList();
+        return listResponse.contents().stream()
+                .map(S3Object::key)
+                .map(this::preSignedUrl)
+                .collect(Collectors.toList());
     }
 
     @Override
     public String preSignedUrl(String fileName) {
+        GetObjectPresignRequest presignRequest = GetObjectPresignRequest.builder()
+                .signatureDuration(Duration.ofHours(1))
+                .getObjectRequest(GetObjectRequest.builder()
+                        .bucket(bucketName)
+                        .key(fileName)
+                        .build())
+                .build();
 
-        Date expirationDate = new Date();
-        long time = expirationDate.getTime();
-        int hour = 120; // duration for image link to available, iss algo se imageurl is going to valid for only 7 days
-        time = time + (long) hour * 60 * 60 * 1000;
-
-        expirationDate.setTime(time);
-
-        GeneratePresignedUrlRequest generatePresignedUrlRequest = new GeneratePresignedUrlRequest(bucketName, fileName)
-                .withMethod(HttpMethod.GET)
-                .withExpiration(expirationDate);
-        URL url = client.generatePresignedUrl(generatePresignedUrlRequest);
-
-        return url.toString();
+        PresignedGetObjectRequest presignedRequest = s3Presigner.presignGetObject(presignRequest);
+        return presignedRequest.url().toString();
     }
 
     @Override
     public String getImageUrlByName(String fileName) {
-        S3Object object = client.getObject(bucketName, fileName);
-        String key = object.getKey();
-        return preSignedUrl(key);
+        return preSignedUrl(fileName);
     }
-
-
 }
